--- a/index.html
+++ b/index.html
@@ -45,12 +45,26 @@
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button type="button" class="btn btn-outline-secondary">Notifications</button>
+                  <button type="button" class="btn btn-outline-secondary">Profile</button>
                 </form>
               </div>
             </div>
           </nav>   
-    </header>
+    </header> 
 
+    <!-- <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <strong>Logged in Successfully</strong> 
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <strong>Login Failed</strong> 
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div> -->
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <strong>You are not logged-in!</strong> 
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -62,4 +76,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
   </body>
+  <footer>
+    All rights reserved &copy; 2021
+  </footer>
 </html>
