--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Ekadantha Enterprises</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <title>Ekadantha Enterprises - Online Shopping site</title>
   </head>
   <body>
     <header>
@@ -66,6 +67,7 @@
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     <main>
+      <div class="container">
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -78,21 +80,45 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="https://source.unsplash.com/1600x900/?gift items" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Gift items</h3>
+              <p>Gift your loved ones with precious items</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="https://source.unsplash.com/1600x900/?sports,cricket" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Sports accessories</h3>
+              <p>Great deals on sports accessories</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="https://source.unsplash.com/1600x900/?stationery" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Back to School offer</h3>
+              <p>Min 50% off on stationary items</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="https://source.unsplash.com/1600x900/?dolls" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Dolls</h3>
+              <p>Children dolls with Min 40% off</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="https://source.unsplash.com/1600x900/?xerox" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Xerox</h3>
+              <p>Fast xerox with best price</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="https://source.unsplash.com/1600x900/?toys" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Toys</h3>
+              <p>Make your kids happy with our Toys</p>
+            </div>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -104,6 +130,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+    </div>
     </main>
     <!-- Optional JavaScript; choose one of the two! -->
 
