--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <title>Ekadantha Enterprises - Online Shopping site</title>
+    <title>Ekadantha Enterprises ಏಕದಂತ ಎಂಟರ್ಪ್ರೈಸಸ್  - Online Shopping site</title>
   </head>
   <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Ekadantha Enterprises</a>
+              <a class="navbar-brand" href="#">Ekadantha Enterprises </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -34,7 +34,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#">Contact</a></li>
-                      <li><a class="dropdown-item" href="#">About Us</a></li>
+                      <li><a class="dropdown-item" href="about.html">About Us</a></li>
                       <!-- <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                     </ul>
@@ -68,7 +68,7 @@
     </div>
     <main>
       <div class="container">
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -83,6 +83,9 @@
             <div class="carousel-caption d-none d-md-block">
               <h3>Gift items</h3>
               <p>Gift your loved ones with precious items</p>
+              <button type="button" class="btn btn-primary">Sports</button>
+              <button type="button" class="btn btn-success">Stationery Items</button>
+              <button type="button" class="btn btn-info">Gift Items </button>
             </div>
           </div>
           <div class="carousel-item">
@@ -90,6 +93,9 @@
             <div class="carousel-caption d-none d-md-block">
               <h3>Sports accessories</h3>
               <p>Great deals on sports accessories</p>
+              <button type="button" class="btn btn-primary">Sports</button>
+              <button type="button" class="btn btn-success">Stationery Items</button>
+              <button type="button" class="btn btn-info">Gift Items </button>
             </div>
           </div>
           <div class="carousel-item">
@@ -97,6 +103,9 @@
             <div class="carousel-caption d-none d-md-block">
               <h3>Back to School offer</h3>
               <p>Min 50% off on stationary items</p>
+              <button type="button" class="btn btn-primary">Sports</button>
+              <button type="button" class="btn btn-success">Stationery Items</button>
+              <button type="button" class="btn btn-info">Gift Items </button>
             </div>
           </div>
           <div class="carousel-item">
@@ -104,6 +113,9 @@
             <div class="carousel-caption d-none d-md-block">
               <h3>Dolls</h3>
               <p>Children dolls with Min 40% off</p>
+              <button type="button" class="btn btn-primary">Sports</button>
+              <button type="button" class="btn btn-success">Stationery Items</button>
+              <button type="button" class="btn btn-info">Gift Items </button>
             </div>
           </div>
           <div class="carousel-item">
@@ -111,6 +123,9 @@
             <div class="carousel-caption d-none d-md-block">
               <h3>Xerox</h3>
               <p>Fast xerox with best price</p>
+              <button type="button" class="btn btn-primary">Sports</button>
+              <button type="button" class="btn btn-success">Stationery Items</button>
+              <button type="button" class="btn btn-info">Gift Items </button>
             </div>
           </div>
           <div class="carousel-item">
@@ -118,6 +133,9 @@
             <div class="carousel-caption d-none d-md-block">
               <h3>Toys</h3>
               <p>Make your kids happy with our Toys</p>
+              <button type="button" class="btn btn-primary">Sports</button>
+              <button type="button" class="btn btn-success">Stationery Items</button>
+              <button type="button" class="btn btn-info">Gift Items </button>
             </div>
           </div>
         </div>
@@ -129,6 +147,32 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+      </div>
+    </div>
+    <div class="container marketing">
+
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-lg-4">
+          <img  class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/thmb1.jpg" alt="">
+          <h2>Ekadantha Enterprises</h2>
+          <p>Our objective is providing stationery, sports materials, gift items and other services and services under one roof. </p>
+          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img  class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/thmb2.jpg" alt="">
+  
+          <h2>ಏಕದಂತ ಎಂಟರ್ಪ್ರೈಸಸ್</h2>
+          <p>ಲೇಖನ ಸಾಮಗ್ರಿಗಳು, ಕ್ರೀಡಾ ಸಾಮಗ್ರಿಗಳು, ಉಡುಗೊರೆ ವಸ್ತುಗಳು ಮತ್ತು ಇತರ ಸೇವೆಗಳು ಮತ್ತು ಸೇವೆಗಳನ್ನು ಒಂದೇ ಸೂರಿನಡಿ ಒದಗಿಸುವುದು ನಮ್ಮ ಉದ್ದೇಶ.</p>
+          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img  class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/thmb3.jpg" alt="">
+  
+          <h2>एकदंथा इंटरप्राइजेज</h2>
+          <p>हमारा उद्देश्य एक ही छत के नीचे स्टेशनरी, खेल सामग्री, उपहार सामग्री और अन्य सेवाएं और सेवाएं प्रदान करना है।</p>
+          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        </div>
       </div>
     </div>
     </main>
