1st Success trail

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="https://source.unsplash.com/1600x900/?gift items" class="d-block w-100" alt="...">
+            <img src="img/ee/shopimg1.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h3>Gift items</h3>
               <p>Gift your loved ones with precious items</p>
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://source.unsplash.com/1600x900/?sports,cricket" class="d-block w-100" alt="...">
+            <img src="img/ee/shopimg5.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h3>Sports accessories</h3>
               <p>Great deals on sports accessories</p>
@@ -99,7 +99,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://source.unsplash.com/1600x900/?stationery" class="d-block w-100" alt="...">
+            <img src="img/ee/shopimg6.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h3>Back to School offer</h3>
               <p>Min 50% off on stationary items</p>
@@ -109,7 +109,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://source.unsplash.com/1600x900/?dolls" class="d-block w-100" alt="...">
+            <img src="img/ee/shopimg7.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h3>Dolls</h3>
               <p>Children dolls with Min 40% off</p>
@@ -119,7 +119,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://source.unsplash.com/1600x900/?xerox" class="d-block w-100" alt="...">
+            <img src="img/ee/shopimg19.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h3>Xerox</h3>
               <p>Fast xerox with best price</p>
@@ -129,7 +129,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://source.unsplash.com/1600x900/?toys" class="d-block w-100" alt="...">
+            <img src="img/ee/shopimg18.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h3>Toys</h3>
               <p>Make your kids happy with our Toys</p>
