--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <title>Ekadantha Enterprises ಏಕದಂತ ಎಂಟರ್ಪ್ರೈಸಸ್  - Online Shopping site</title>
   </head>
   <body>
@@ -23,7 +26,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Shop</a>
@@ -54,9 +57,11 @@
           </nav>   
     </header> 
 
-    <!-- <div class="alert alert-success alert-dismissible fade show" role="alert">
-      <strong>Logged in Successfully</strong> 
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+     <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <strong>Welcome to our website </strong> 
+    </div>
+
+      <!--<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
       <strong>Login Failed</strong> 
