--- a/services.html
+++ b/services.html
@@ -102,7 +102,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="SignUpModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="SignUpModalLabel">Create Your Account</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -142,7 +142,17 @@
         </div>
     </div>
     <main>
-
+       <div class="container">
+        <Body class="bgim" background="img/ser bg img.png">
+            <div style="color: white;" class="container my-5">
+                <h2 style="font-family:cursive;">Services:</h2>
+                <img src="img/ee2/ser1.jpeg" class="img-thumbnail img-fluid" style="border: black solid;" alt="...">
+                <img src="img/ee2/ser2.jpeg" class="img-thumbnail img-fluid my-5" style="border: black solid;" alt="...">
+                <img src="img/ee2/ser3.jpeg" class="img-thumbnail img-fluid my-5" style="border: black solid;" alt="...">
+                
+            </div>
+    
+       </div>
         <!-- Optional JavaScript; choose one of the two! -->
 
         <!-- Option 1: Bootstrap Bundle with Popper -->
