--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
     <title>Ekadantha Enterprises ಏಕದಂತ ಎಂಟರ್ಪ್ರೈಸಸ್ - Online Shopping site</title>
 </head>
 
-<body>
+<body style="background-color: burlywood;">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
@@ -143,8 +143,7 @@
     </div>
     <main>
        <div class="container">
-        <Body class="bgim" background="img/ser bg img.png">
-            <div style="color: white;" class="container my-5">
+            <div style="color: rgb(29, 6, 6);" class="container my-5">
                 <h2 style="font-family:cursive;">Services:</h2>
                 <img src="img/ee2/ser1.jpeg" class="img-thumbnail img-fluid" style="border: black solid;" alt="...">
                 <img src="img/ee2/ser2.jpeg" class="img-thumbnail img-fluid my-5" style="border: black solid;" alt="...">
