--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
     <title>Ekadantha Enterprises ಏಕದಂತ ಎಂಟರ್ಪ್ರೈಸಸ್ - Online Shopping site</title>
 </head>
 
-<body style="background-color: burlywood;">
+<body class="alert-warning">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
